Material vs Rendered - rendering inconsistency in the viewport #42622

Closed
opened 2014-11-17 06:27:03 +01:00 by Dolphin Dream · 10 comments
Member

System Information
MacBook Pro
Processor 2.2 GHz Intel Core i7
Memory 8 GB 1333 MHz DDR3
Graphics AMD Radeon HD 6750M 1024 MB
Software OS X 10.8.5 - Mountain Lion

Blender Version
2.72b (9e963ae)

Short description of error
There seems to be a rendering inconsistency between the Material render mode and the Rendered (cycle) render mode in the viewport whenever rendering a environment texture (e.g. equilateral textured mapped to a sphere).

Exact steps for others to reproduce the error
see the attached blend file and the screenshots showing Venus texture map mapped to a sphere (the upper viewport is Material render mode, the bottom is the Rendered Mode). The correct mapping of the Venus texture is given by the Material render mode, while the Rendered (cycle) render mode seems to have a Y flip of the texture.

material-vs-rendered-ViewportRenderInconsistency.blend

Screen_Shot_2014-11-17_at_12.23.54_AM.png

**System Information** MacBook Pro Processor 2.2 GHz Intel Core i7 Memory 8 GB 1333 MHz DDR3 Graphics AMD Radeon HD 6750M 1024 MB Software OS X 10.8.5 - Mountain Lion **Blender Version** 2.72b (9e963ae) **Short description of error** There seems to be a rendering inconsistency between the Material render mode and the Rendered (cycle) render mode in the viewport whenever rendering a environment texture (e.g. equilateral textured mapped to a sphere). **Exact steps for others to reproduce the error** see the attached blend file and the screenshots showing Venus texture map mapped to a sphere (the upper viewport is Material render mode, the bottom is the Rendered Mode). The correct mapping of the Venus texture is given by the Material render mode, while the Rendered (cycle) render mode seems to have a Y flip of the texture. [material-vs-rendered-ViewportRenderInconsistency.blend](https://archive.blender.org/developer/F124376/material-vs-rendered-ViewportRenderInconsistency.blend) ![Screen_Shot_2014-11-17_at_12.23.54_AM.png](https://archive.blender.org/developer/F124377/Screen_Shot_2014-11-17_at_12.23.54_AM.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MariusGiurgi

Added subscriber: @MariusGiurgi

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Sergey Sharybin self-assigned this 2014-11-18 10:34:34 +01:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Will check this one. @Psy-Fi might be faster here tho with his glsl-fu :)

Will check this one. @Psy-Fi might be faster here tho with his glsl-fu :)

This issue was referenced by 102d3ad595

This issue was referenced by 102d3ad595d90f20919d609d426ec98e29fd1686

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 102d3ad595.

Closed by commit 102d3ad595.

This issue was referenced by 70dee80a8b74ce0a16f2d7d1bad30fa6a1f66fd9

This issue was referenced by 70dee80a8b74ce0a16f2d7d1bad30fa6a1f66fd9

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42622
No description provided.