Fix T42622, environment texture GLSL result different from rendering.

Also included mirror ball shader, which was missing.